add env vars to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t registry.heroku.com/citadle-frontend/web .
+        env:
+          VITE_API_URL: ${{ secrets.API_URL }}
+          VITE_API_KEY: ${{ secrets.API_KEY }}
 
       - name: Push Docker image to Heroku container registry
         run: docker push registry.heroku.com/citadle-frontend/web
